--- a/demo/demo/templates/demo/base.html
+++ b/demo/demo/templates/demo/base.html
@@ -15,6 +15,7 @@
             <a href="{% url 'form_by_field' %}">form_by_field</a>
             <a href="{% url 'form_horizontal' %}">form_horizontal</a>
             <a href="{% url 'form_inline' %}">form_inline</a>
+            <a href="{% url 'form_tabular' %}">form_tabular inline</a>
             <a href="{% url 'form_with_files' %}">form_with_files</a>
             <a href="{% url 'pagination' %}">pagination</a>
             <a href="{% url 'misc' %}">miscellaneous</a>
